--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "helmet": "^3.9.0",
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "mysql2": "^1.4.2"
   }
 }
