--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
     "mysql": "^2.15.0",
-    "mysql2": "^1.4.2"
+    "mysql2": "^1.4.2",
+    "node-mysql-importer": "0.0.10",
+    "opn": "^5.1.0",
+    "yamljs": "^0.3.0"
   }
 }
